# signi_rest_test_runner

./: README.md  ai_usage.md  findings.md  main.py  pyproject.toml  requirements.txt  test_config.yaml
scenarios/: example.yaml
signi_rest_test_runner/: main.py  test_config.yaml
signi_rest_test_runner/src/signi_rest_test_runner/: runner.py
src/signi_rest_test_runner/: executor.py  runner.py  scenario_loader.py  utils.py  validator.py
