# pyproject.toml
[tool.poetry]
name = "signi-rest-test-runner"
version = "0.1.0"
description = "A simple YAML-based REST API test runner with variable extraction and assertions"
authors = ["Sugesh Chandran <sugeshchandran@signi5sys.com>"]
packages = [
  { include = "src/signi_rest_test_runner" }
]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = "^0.27.0"
jinja2 = "^3.1.3"
jsonpath-ng = "^1.6.1"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
run-tests = "signi_rest_test_runner.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
